--- a/YoutubeCommentAnalysis/appsettings.json
+++ b/YoutubeCommentAnalysis/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=UsersDB;Username=postgres;Password=PGShuso8!"
   },
+  "YoutubeApi": {
+    "ApiKey": "AIzaSyAXrxyUGBEeKuTt2EFBDuvR54MAgxp9ME4"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
