--- a/YoutubeCommentAnalysis/appsettings.json
+++ b/YoutubeCommentAnalysis/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Host=localhost;Database=UsersDB;Username=postgres;Password=PGShuso8!"
   },
   "YoutubeApi": {
-    "ApiKey": "AIzaSyAXrxyUGBEeKuTt2EFBDuvR54MAgxp9ME4"
+    "ApiKey": "your_api_key"
   },
   "Logging": {
     "LogLevel": {
