--- a/YoutubeCommentAnalysis/appsettings.json
+++ b/YoutubeCommentAnalysis/appsettings.json
@@ -5,6 +5,12 @@
   "YoutubeApi": {
     "ApiKey": "your_api_key"
   },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "mirzezadehuseyn0@gmail.com",
+    "Password": "iqopgrlvqiifceas"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
