--- a/YoutubeCommentAnalysis/appsettings.json
+++ b/YoutubeCommentAnalysis/appsettings.json
@@ -9,7 +9,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "mirzezadehuseyn0@gmail.com",
-    "Password": "iqopgrlvqiifceas"
+    "Password": "your_pswd"
   },
   "Logging": {
     "LogLevel": {
